--- a/index.html
+++ b/index.html
@@ -314,22 +314,16 @@
             </div>
             <div class="catalogues-text">
               <h4>Novis Branded Catalogue</h4>
-              <p>August 2022</p>
-            </div>
-            <div class="catalogues-icon">
-              <img src="images/Slider-arrow-right.png" />
+              <a href="">August 2022<img src="images/Slider-arrow-right.png"></a>
             </div>
           </div>
           <div class="col-lg-4 cata">
             <div class="catalogues-img">
               <img src="images/prodcata.png" />
             </div>
-            <div class="catalogues-text">
+            <div class="catalogues-text2">
               <h4>Pressure Injury Prevention Products Catalogue</h4>
-              <div class="catalogues-icon1">
-                <img src="images/Slider-arrow-right.png" />
-              </div>
-              <p>August 2022</p>
+              <a href="">August 2022<img src="images/Slider-arrow-right.png"></a>
             </div>
           </div>
           <div class="col-lg-4 cata">
@@ -338,11 +332,9 @@
             </div>
             <div class="catalogues-text">
               <h4>Community Hire catalogue</h4>
-              <p>August 2022</p>
+              <a href="">August 2022<img src="images/Slider-arrow-right.png"></a>
             </div>
-            <div class="catalogues-icon2">
-              <img src="images/Slider-arrow-right.png" />
-            </div>
+           
           </div>
           <hr />
         </div>
@@ -479,6 +471,7 @@
 
     <!-- do section -->
     <section class="do">
+      <h2>Don’t just take our word for it</h2>
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
@@ -558,9 +551,25 @@
               <img src="images/ndisreg.png" />
             </div>
           </div>
-          <div class="col-lg-2 col-md-4 col-sm-4">
+          <!-- <div class="col-lg-2 col-md-4 col-sm-4">
             <div class="image">
               <img src="images/google.png" />
+            </div>
+          </div> -->
+          <div class="col-lg-2 col-md-4 col-sm-4 google">
+            <div class="google-img">
+              <img src="images/google-icon 4.png">
+            </div>
+            <div class="google-text">
+              <span>Google Rating</span>
+              <div class="google-icon">
+               <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              </div>
+              <p>See all our reviews</p>
             </div>
           </div>
         </div>
@@ -574,43 +583,43 @@
           <div class="col-lg-3 col-sm-6">
             <div class="info-text">
               <h4>CUSTOMER INFO</h4>
-              <p>Community Rental Request</p>
-              <p>Community Trial Request</p>
-              <p>Equipment Service Support</p>
-              <p>Return Authorisation Form</p>
-              <p>AS/NZS Standards</p>
-              <p>Novis Warranty Statement</p>
-              <p>Where to Buy</p>
-              <p>Novis Code of Conduct</p>
+              <a href="#">Community Rental Request</a>
+              <a href="#">Community Trial Request</a>
+              <a href="#">Equipment Service Support</a>
+              <a href="#">Return Authorisation Form</a>
+              <a href="#">AS/NZS Standards</a>
+              <a href="#">Novis Warranty Statement</a>
+              <a href="#">Where to Buy</a>
+              <a href="#">Novis Code of Conduct</a>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="info-text">
               <h4>MEMBER ACCESS</h4>
-              <p>Partner Login</p>
-              <p>Product Brochures & Resources</p>
-              <p>NORM Login</p>
-              <p>Register to become a Partner</p>
+              <a href="#">Partner Login</a>
+              <a href="#">Product Brochures & Resources</a>
+              <a href="#">NORM Login</a>
+              <a href="#">Register to become a Partner</a>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="info-text">
               <h4>EDUCATION</h4>
-              <p>Articles</p>
-              <p>Pressure Injury Prevention</p>
-              <p>Dementia Resources</p>
-              <p>Star Cushions for Wheelchair Users</p>
-              <p>Handle with Care Webinar</p>
-              <p>Alternating Mattress Solutions Webinar</p>
-              <p>Bathroom Safety Webinar</p>
-              <p>Upcoming Webinars</p>
+              <a href="#">Articles</a>
+              <a href="#">Pressure Injury Prevention</a>
+              <a href="#">Dementia Resources</a>
+              <a href="#">Star Cushions for Wheelchair Users</a>
+              <a href="#">Handle with Care Webinar</a>
+              <a href="#">Alternating Mattress Solutions Webinar</a>
+              <a href="#">Bathroom Safety Webinar</a>
+              <a href="#">Upcoming Webinars</a>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="info-text">
               <h4>Contact us</h4>
-              <p><img src="images/phone.png" /> 1300 738 885</p>
-              <a href="">Contact Us Here</a>
+              <a href="#"><img src="images/phone.png" />   1300 738 885</a>
+              <a href="" class="contact">Contact Us Here</a>
               <img src="images/footericon.png" class="footericon" />
             </div>
           </div>
@@ -630,22 +639,21 @@
           <div class="col-lg-3 col-sm-5">
             <div class="location-text">
               <h4><i class="fas fa-map-marker-alt"></i> NSW</h4>
-              <p>
-                12/12 Mars Rd, Lane Cove West NSW 2066 B3/15 Forrester St,
-                Kingsgrove NSW 2208 3D/6 Boundary Rd, Northmead NSW 2152
-              </p>
+              <a href="#">12/12 Mars Rd, Lane Cove West NSW 2066</a>
+              <a href="#"> B3/15 Forrester St,Kingsgrove NSW 2208</a>
+              <a href="#">3D/6 Boundary Rd, Northmead NSW 2152</a>
             </div>
           </div>
           <div class="col-lg-3 col-sm-4">
             <div class="location-text">
               <h4><i class="fas fa-map-marker-alt"></i> QLD</h4>
-              <p>3/59 Eastern Rd, Browns Plains QLD 4118</p>
+              <a>3/59 Eastern Rd, Browns Plains QLD 4118</a>
             </div>
           </div>
           <div class="col-lg-3 col-sm-3">
             <div class="location-text">
               <h4><i class="fas fa-map-marker-alt"></i> VIC</h4>
-              <p>2/59 Eastern Rd, Browns Plains VIC 3211</p>
+              <a>2/59 Eastern Rd, Browns Plains VIC 3211</a>
             </div>
           </div>
         </div>
@@ -682,9 +690,9 @@
           <div class="col-lg-9">
             <div class="footertext">
               <h6>© 2022 All Rights Reserved</h6>
-              <p>Privacy Policy</p>
-              <p>Warranty</p>
-              <p>Cookie Policy</p>
+              <a href="#">Privacy Policy</a>
+              <a href="#">Warranty</a>
+              <a href="#">Cookie Policy</a>
             </div>
           </div>
           <div class="col-lg-3">
