--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="p">
-              <img src="images/topndis.png" />
+              <img src="images/topnds.png" />
               <p>Registered Provider 405 001 9411</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="icon">
-              <i class="fas fa-map-marker-alt"> Store Locator Resources</i>
-              <i class="fa fa-phone-alt"> 1300 738 885</i>
-              <button><i class="fas fa-shopping-cart"></i> online store</button>
+              <p> <i class="fas fa-map-marker-alt"> </i>Store Locator</p>
+              <p>Resources</p>
+              <p> <i class="fa fa-phone-alt"></i>  1300 738 885</p>
+                 <button class="top-header-button"><i class="fas fa-shopping-cart"></i> Online Store</button>
             </div>
           </div>
         </div>
@@ -274,7 +275,7 @@
     <section id="bed" class="bed">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-sm-12">
+          <div class="col-lg-5 col-sm-12">
             <div class="bed-img">
               <img src="images/bed.png" class="img-fluid" />
             </div>
@@ -292,7 +293,7 @@
               <button class="btn">Learn More</button>
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-1">
             <div class="bed-icon">
               <img src="images/Slider-arrow-left.png" />
               <img src="images/Slider-arrow-right.png" />
@@ -373,12 +374,12 @@
       <h2>Upcoming Webinar <a href="">View Past Webinars</a></h2>
       <div class="container">
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-4">
             <div class="injury-img">
               <img src="images/tvicon.png" />
             </div>
           </div>
-          <div class="col-lg-9">
+          <div class="col-lg-8">
             <div class="injury-text">
               <h4>Pressure Injury Prevention</h4>
               <p>
@@ -395,6 +396,7 @@
         </div>
         <hr />
       </div>
+
     </section>
 
     <!-- latestnews section -->
