--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
               <p> <i class="fas fa-map-marker-alt"> </i>Store Locator</p>
               <p>Resources</p>
               <p> <i class="fa fa-phone-alt"></i>  1300 738 885</p>
+              <div class="top-btn">
                  <button class="top-header-button"><i class="fas fa-shopping-cart"></i> Online Store</button>
+              </div>
             </div>
           </div>
         </div>
