--- a/index.html
+++ b/index.html
@@ -169,10 +169,17 @@
       </div>
     </section>
 
+    
     <!-- specialists section -->
     <section class="specialist">
-      <h2>We Are Specialists In</h2>
       <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="specialist-heading">
+        <h2>We Are Specialists In</h2>
+      </div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-lg-4">
             <div class="specialist-img">
@@ -217,6 +224,9 @@
             </div>
           </div>
         </div>
+      </div>
+         <div class="feedback">
+            <img src="images/image 78.png">
       </div>
     </section>
 
